[package]
name = "just_crypto"
version = "1.0.1"
edition = "2021"

[lib]
name = "just_crypto"
crate-type = ["cdylib", "staticlib"]

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
blake3 = "1.8.3"
cbc = "0.1.2"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hmac = "0.12.1"
rand = "0.8.5"
rand_core = "0.6.4"
sha2 = "0.10.9"
subtle = "2.6.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = "1.8.2"

